Replace openai java wrapper